[package]
name = "hort-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "hort gitops configuration — zero-I/O YAML parsing, validation, diff"

[lints]
workspace = true

[dependencies]
# re-uses RepositoryFormat / RepositoryType / ReplicationPriority /
# PromotionConfig / CurationConfig directly so the YAML schema mirrors the
# persisted shape with no parallel enum surface to maintain. Domain layer
# is pure Rust + zero I/O, so importing it here doesn't break the
# zero-runtime guarantee on `hort-config`.
hort-domain = { path = "../hort-domain" }

# The envelope structs and per-kind specs derive `Serialize`/`Deserialize`;
# error variants derive `thiserror::Error`.
serde = { workspace = true }
# Canonicalised JSON for `spec_digest` — sorted-key serialisation
# of the parsed spec yields a stable hash insensitive to YAML whitespace.
serde_json = { workspace = true }
# YAML parsing for the `kind`/`spec` envelope.
serde_yaml_ng = { workspace = true }
# SHA-256 for `spec_digest` — content-addressed digest of the
# canonicalised spec lets the diff layer detect "spec changed
# since last apply" without re-comparing every field.
sha2 = { workspace = true }
# Per-crate error enums.
thiserror = { workspace = true }
# UUIDs in `CurrentSnapshot` — referenced from the diff layer when it
# produces `delete` plans against `Repository.id`. Workspace-already
# declares it for the rest of the codebase.
uuid = { workspace = true }
# `Exclusion.expiresAt` carries an RFC3339 timestamp parsed into
# `DateTime<Utc>` at YAML deserialize time.
chrono = { workspace = true }
# `ScanPolicy.quarantineDuration` / `maxArtifactAge` are humantime
# strings (e.g. `"24h"`, `"90d"`) parsed at validate-time.
humantime = { workspace = true }

# PEM parsing for `extra_ca::ExtraTrustAnchors` (ADR 0010).
# Uses the same `CertificateDer::pem_slice_iter` entrypoint as
# `hort-adapters-upstream-http/src/tls_config.rs` so parsing semantics
# match across the codebase. Not in the workspace Cargo.toml (it is a
# transitive dep via the adapter crates, but `hort-config` must declare
# it explicitly because it uses the crate directly).
rustls-pki-types = { version = "1", features = ["std"] }

# NOTE: deliberately NO tokio, tracing, sqlx, axum, reqwest. This is a
# zero-I/O library — file walking lives in `hort-server::gitops_boot`,
# tracing in the boot caller, persistence in the apply use case
# (`hort-app`). Adding any of those here would couple parsing/validation
# to a runtime and make the unit tests slower.

[dev-dependencies]
