[package]
name = "hort-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "hort WASM format module host — loads, dispatches, and sandboxes format handlers"

[lints]
workspace = true

[dependencies]
hort-domain = { path = "../hort-domain" }
hort-app    = { path = "../hort-app" }

tokio         = { workspace = true }
bytes         = { workspace = true }
tracing       = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
# The npm packument streaming projector projects `time{<version>}` as
# `DateTime<Utc>` for the trust-publish-time hint. Already in the workspace
# transitively; explicit edge here keeps the dep graph honest.
chrono        = { workspace = true }
urlencoding   = "2"
# npm `dist.integrity` is a base64-encoded SRI (`sha512-<base64>`); the
# parser decodes it to raw bytes before hex-encoding for
# `UpstreamPublishedChecksum`. Not a workspace dep but pulled in
# transitively at v0.22 (matches the other crates that pin it directly).
base64        = "0.22"
# All ZIP extraction must go through
# hort-formats::archive_bounds::iter_zip_entries (see ADR 0006). This is
# the only crate in the workspace permitted to depend on `zip` directly
# (enforced by deny.toml [bans] wrappers = ["hort-formats"]).
zip           = { workspace = true }
# gzip-tar single-entry reader (`archive_bounds::read_tar_gz_entry`) for
# npm `.tgz` + cargo `.crate` manifest extraction. `flate2` (GzDecoder)
# + `tar` (Archive::entries) are deny.toml-locked to `hort-formats` as
# the only sanctioned archive-extraction home (deny.toml:183-189).
flate2        = { workspace = true }
tar           = { workspace = true }
# Cargo `.crate` `Cargo.toml` `[dependencies]` parser (the renamed-dep
# `package` key). Added here now to keep Cargo.toml churn in one place;
# the workspace table already pins `toml`.
toml          = { workspace = true }
# Per-format range resolution for the transitive prefetch cascade
# (see explanation/prefetch-pipeline.md). `semver` covers npm + cargo (both
# follow semver §11 precedence; their range grammars are the
# `semver` crate's default interpretation). `pep440_rs` covers
# PyPI's specifier grammar (`>=2,<3`, `~=1.4`, `===` arbitrary-
# equality, etc.); hand-rolling it would re-derive the published
# grammar of `pip._vendor.packaging`, which is the wrong cost
# trade-off. Both are pure-Rust with no TLS surface; range-max
# parsing happens only against bytes the upstream-verification
# path already validated. The prior `hort-app` `index_serve_filter`
# wiring deliberately avoided these crates because it needed
# ORDERING only; the range-grammar surface is documented
# in `index_serve_filter.rs` at the `NpmSemverOrdering` docstring.
semver        = "1"
pep440_rs     = "0.7"

[features]
# Exposes cross-crate test fixtures: `archive_bounds::build_zip_bytes`
# (UTF-8 bodies, used by `hort-adapters-advisory-osv`) and
# `test_support::build_wheel_zip` (raw-bytes bodies, used by
# `hort-http-pypi` for wheel METADATA fixtures). The `zip` crate is
# `deny.toml`-locked to `hort-formats` as the only wrapper; this
# feature is the cross-crate tunnel.
test-support = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
