[package]
name = "hort-http-events"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "hort inbound HTTP adapter for /api/v1/events pull-resync"

[lints]
workspace = true

[dependencies]
hort-domain    = { path = "../hort-domain" }
hort-app       = { path = "../hort-app" }
hort-http-core = { path = "../hort-http-core" }

axum         = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
thiserror    = { workspace = true }
arc-swap     = { workspace = true }
# `hort_app::metrics::emit_events_pull` is called directly from the handler;
# no direct `metrics` use beyond what `hort-app` already wires.

[dev-dependencies]
tokio                       = { workspace = true, features = ["test-util"] }
hort-app                      = { path = "../hort-app", features = ["test-support"] }
hort-http-core                = { path = "../hort-http-core", features = ["test-support"] }
tower                       = { workspace = true }
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-util                = { workspace = true }
